china-pos/cd/k8s/test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: test
  name: china-pos
spec:
  replicas: 1
  selector:
    matchLabels:
      resource-namespace: jebsen
      resource-env: test
      resource-name: china-pos
  template:
    metadata:
      namespace: test
      name: china-pos
      labels:
        resource-namespace: jebsen
        resource-env: test
        resource-name: china-pos
    spec:
      containers:
        - name: wms-ws
          image: ghcr.io/jebsen-git/china-pos:test-latest
          args: ["--spring.profiles.active=uat"]
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
        - image: 'busybox:ubuntu-14.04'
          imagePullPolicy: IfNotPresent
          name: busybox
          stdin: true
      imagePullSecrets:
        - name: ghcr-image-pull-credentials
