china-pos/cd/k8s/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: test
  name: wms-ws
spec:
  selector:
    resource-namespace: jebsen
    resource-env: test
    resource-name: wms-ws
  ports:
    - name: http
      targetPort: 8080
      port: 8080
